update versions of java, gradle, spring boot, spring rest docs, etc